Versão Final Sprint 1

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       --laranja-principal: #ff8c00;
       --laranja-escuro: #cc7000;
       --fundo-table: #fffdf7;
-      --fonte-pet: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      --fonte-pet: 'Segoe UI', Tahoma, Verdana, sans-serif;
     }
 
     body {
